--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 
 	<build>
 		<plugins>
+			<!--打包启动-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
