--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+#webÈİÆ÷ÅäÖÃ
+#TomcatÅäÖÃ
+server.port=8081
+server.error.path=/error
+server.servlet.session.timeout=30m
+server.servlet.context-path=/charpter02/
+server.tomcat.uri-encoding=utf-8
+server.tomcat.max-threads=500
+server.tomcat.basedir=/home/sang/tmp
