--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ server.servlet.context-path=/charpter02/
 server.tomcat.uri-encoding=utf-8
 server.tomcat.max-threads=500
 server.tomcat.basedir=/home/sang/tmp
+# keytool -genkey -alias tomcathttps -keyalg RSA -keysize 2048 -keystore sang.p12 -validity 365
+
+server.ssl.key-store=sang.p12
+server.ssl.key-alias=tomcathttps
+server.ssl.key-store-password=123456
