--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--jetty服务器-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-jetty</artifactId>-->
+        <!--</dependency>-->
+
+        <!--undertow服务器-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jetty</artifactId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
     </dependencies>
     <!--项目依赖版本的统一管理-->
