--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-#web»›∆˜≈‰÷√
-#Tomcat≈‰÷√
+#web\u5BB9\u5668\u914D\u7F6E
+#Tomcat\u914D\u7F6E
 server.port=8081
 server.error.path=/error
 server.servlet.session.timeout=30m
@@ -13,3 +13,8 @@ server.tomcat.basedir=/home/sang/tmp
 server.ssl.key-store=sang.p12
 server.ssl.key-alias=tomcathttps
 server.ssl.key-store-password=123456
+
+#\u5C5E\u6027\u914D\u7F6E
+book.name=\u4E09\u56FD\u6F14\u4E49
+book.author=\u7F57\u8D2F\u4E2D
+book.price=39
